--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -17,6 +17,7 @@
         <header>
             <nav>
                 <div>Section de test mentor</div>
+                <div>div a tester aussi</div>
             </nav>
         </header>
     </body>
